--- a/2phase/P2-Code-Challenge-Review.ipynb
+++ b/2phase/P2-Code-Challenge-Review.ipynb
@@ -454,9 +454,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dplearn",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "dplearn"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -468,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
