--- a/3phase/checkpoints/index.ipynb
+++ b/3phase/checkpoints/index.ipynb
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -354,8 +354,8 @@
       "Dep. Variable:              SalePrice   R-squared:                       0.495\n",
       "Model:                            OLS   Adj. R-squared:                  0.495\n",
       "Method:                 Least Squares   F-statistic:                     1175.\n",
-      "Date:                Wed, 15 Jun 2022   Prob (F-statistic):          4.39e-180\n",
-      "Time:                        14:14:59   Log-Likelihood:                -14902.\n",
+      "Date:                Tue, 16 May 2023   Prob (F-statistic):          4.39e-180\n",
+      "Time:                        16:01:18   Log-Likelihood:                -14902.\n",
       "No. Observations:                1201   AIC:                         2.981e+04\n",
       "Df Residuals:                    1199   BIC:                         2.982e+04\n",
       "Df Model:                           1                                         \n",
@@ -383,19 +383,15 @@
     "import statsmodels.api as sm\n",
     "\n",
     "# Replace None with appropriate code\n",
-    "simple_model = None\n",
-    "### BEGIN SOLUTION\n",
-    "\n",
     "simple_model = sm.OLS(df[\"SalePrice\"], sm.add_constant(df[[\"GrLivArea\"]]))\n",
     "\n",
-    "### END SOLUTION\n",
     "simple_model_results = simple_model.fit()\n",
     "print(simple_model_results.summary())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -415,16 +411,10 @@
     "# simple_model should have 1 feature (other than the constant)\n",
     "assert simple_model.df_model == 1\n",
     "\n",
-    "# PUT ALL WORK FOR THE ABOVE QUESTION ABOVE THIS CELL\n",
-    "# THIS UNALTERABLE CELL CONTAINS HIDDEN TESTS\n",
-    "### BEGIN HIDDEN TESTS\n",
-    "\n",
     "# check for the specific target and feature we specified\n",
     "\n",
     "assert simple_model.endog_names == \"SalePrice\"\n",
-    "assert simple_model.exog_names[1] == \"GrLivArea\"\n",
-    "\n",
-    "### END HIDDEN TESTS"
+    "assert simple_model.exog_names[1] == \"GrLivArea\"\n"
    ]
   },
   {
@@ -452,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -466,19 +456,13 @@
    "outputs": [],
    "source": [
     "# Replace None with appropriate code\n",
-    "r_squared = None\n",
-    "model_is_significant = None\n",
-    "### BEGIN SOLUTION\n",
-    "\n",
     "r_squared = simple_model_results.rsquared\n",
-    "model_is_significant = simple_model_results.f_pvalue < 0.05\n",
-    "\n",
-    "### END SOLUTION"
+    "model_is_significant = simple_model_results.f_pvalue < 0.05\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -498,13 +482,7 @@
     "assert 0 <= r_squared and r_squared <= 1\n",
     "assert type(r_squared) == float or type(r_squared) == np.float64\n",
     "\n",
-    "# PUT ALL WORK FOR THE ABOVE QUESTION ABOVE THIS CELL\n",
-    "# THIS UNALTERABLE CELL CONTAINS HIDDEN TESTS\n",
-    "### BEGIN HIDDEN TESTS\n",
-    "\n",
-    "assert round(r_squared, 3) == 0.495\n",
-    "\n",
-    "### END HIDDEN TESTS"
+    "assert round(r_squared, 3) == 0.495\n"
    ]
   },
   {
@@ -526,13 +504,8 @@
     "# model_is_significant should be True or False\n",
     "assert model_is_significant == True or model_is_significant == False\n",
     "\n",
-    "# PUT ALL WORK FOR THE ABOVE QUESTION ABOVE THIS CELL\n",
-    "# THIS UNALTERABLE CELL CONTAINS HIDDEN TESTS\n",
-    "### BEGIN HIDDEN TESTS\n",
     "\n",
-    "assert model_is_significant == True\n",
-    "\n",
-    "### END HIDDEN TESTS"
+    "assert model_is_significant == True\n"
    ]
   },
   {
@@ -574,9 +547,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Our simple linear regression model found a y-intercept\n",
-      "of $13,470.44, then for every increase of 1 square foot\n",
-      "above-ground living area, the price increases by $110.71 \n",
+      "A y-intercept of $13,470.44; for every 1 square foot increase\n",
+      "above-ground living area, the price goes up by $110.71 \n",
       "\n"
      ]
     }
@@ -585,22 +557,16 @@
     "# Replace None with appropriate code\n",
     "\n",
     "# Slope (coefficient of GrLivArea)\n",
-    "m = None\n",
+    "m = simple_model_results.params[\"GrLivArea\"]\n",
     "\n",
     "# Intercept (coefficient of const)\n",
-    "b = None\n",
-    "\n",
-    "### BEGIN SOLUTION\n",
-    "\n",
-    "m = simple_model_results.params[\"GrLivArea\"]\n",
     "b = simple_model_results.params[\"const\"]\n",
     "\n",
-    "### END SOLUTION\n",
+    "\n",
     "\n",
     "print(f\"\"\"\n",
-    "Our simple linear regression model found a y-intercept\n",
-    "of ${round(b, 2):,}, then for every increase of 1 square foot\n",
-    "above-ground living area, the price increases by ${round(m, 2)} \n",
+    "A y-intercept of ${round(b, 2):,}; for every 1 square foot increase\n",
+    "above-ground living area, the price goes up by ${round(m, 2)} \n",
     "\"\"\")"
    ]
   },
@@ -625,13 +591,7 @@
     "# m should be a number\n",
     "assert isinstance(m, Number)\n",
     "\n",
-    "# PUT ALL WORK FOR THE ABOVE QUESTION ABOVE THIS CELL\n",
-    "# THIS UNALTERABLE CELL CONTAINS HIDDEN TESTS\n",
-    "### BEGIN HIDDEN TESTS\n",
-    "\n",
-    "assert round(m, 2) == 110.71\n",
-    "\n",
-    "### END HIDDEN TESTS"
+    "assert round(m, 2) == 110.71\n"
    ]
   },
   {
@@ -653,13 +613,7 @@
     "# b should be a number\n",
     "assert isinstance(b, Number)\n",
     "\n",
-    "# PUT ALL WORK FOR THE ABOVE QUESTION ABOVE THIS CELL\n",
-    "# THIS UNALTERABLE CELL CONTAINS HIDDEN TESTS\n",
-    "### BEGIN HIDDEN TESTS\n",
-    "\n",
-    "assert round(b, -2) == 13500\n",
-    "\n",
-    "### END HIDDEN TESTS"
+    "assert round(b, -2) == 13500\n"
    ]
   },
   {
@@ -689,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -710,8 +664,8 @@
       "Dep. Variable:              SalePrice   R-squared:                       0.614\n",
       "Model:                            OLS   Adj. R-squared:                  0.613\n",
       "Method:                 Least Squares   F-statistic:                     476.5\n",
-      "Date:                Wed, 15 Jun 2022   Prob (F-statistic):          1.11e-245\n",
-      "Time:                        14:14:59   Log-Likelihood:                -14740.\n",
+      "Date:                Tue, 16 May 2023   Prob (F-statistic):          1.11e-245\n",
+      "Time:                        16:07:42   Log-Likelihood:                -14740.\n",
       "No. Observations:                1201   AIC:                         2.949e+04\n",
       "Df Residuals:                    1196   BIC:                         2.952e+04\n",
       "Df Model:                           4                                         \n",
@@ -741,20 +695,15 @@
    "source": [
     "# Replace None with appropriate code\n",
     "\n",
-    "multiple_model = None\n",
-    "\n",
-    "### BEGIN SOLUTION\n",
-    "\n",
     "multiple_model = sm.OLS(df[\"SalePrice\"], sm.add_constant(df.drop(\"SalePrice\", axis=1)))\n",
     "\n",
-    "### END SOLUTION\n",
     "multiple_model_results = multiple_model.fit()\n",
     "print(multiple_model_results.summary())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -774,16 +723,9 @@
     "# multiple_model should have 4 features (other than the constant)\n",
     "assert multiple_model.df_model == 4\n",
     "\n",
-    "# PUT ALL WORK FOR THE ABOVE QUESTION ABOVE THIS CELL\n",
-    "# THIS UNALTERABLE CELL CONTAINS HIDDEN TESTS\n",
-    "### BEGIN HIDDEN TESTS\n",
-    "\n",
-    "# check for the specific target and features we specified\n",
-    "\n",
     "assert multiple_model.endog_names == \"SalePrice\"\n",
     "assert sorted(multiple_model.exog_names[1:]) == sorted(['GrLivArea', 'GarageArea', 'LotArea', 'LotFrontage'])\n",
-    "\n",
-    "### END HIDDEN TESTS"
+    "\n"
    ]
   },
   {
@@ -808,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -822,17 +764,17 @@
    "outputs": [],
    "source": [
     "# Replace None with appropriate code\n",
-    "second_model_is_better = None\n",
+    "second_model_is_better = multiple_model_results.rsquared > simple_model_results.rsquared\n",
     "### BEGIN SOLUTION\n",
     "\n",
-    "second_model_is_better = multiple_model_results.rsquared > simple_model_results.rsquared\n",
+    "\n",
     "\n",
     "### END SOLUTION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -849,13 +791,8 @@
     "# second_model_is_better should be True or False\n",
     "assert second_model_is_better == True or second_model_is_better == False\n",
     "\n",
-    "# PUT ALL WORK FOR THE ABOVE QUESTION ABOVE THIS CELL\n",
-    "# THIS UNALTERABLE CELL CONTAINS HIDDEN TESTS\n",
-    "### BEGIN HIDDEN TESTS\n",
-    "\n",
     "assert second_model_is_better == True\n",
-    "\n",
-    "### END HIDDEN TESTS"
+    "\n"
    ]
   },
   {
@@ -897,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -911,20 +848,12 @@
    "outputs": [],
    "source": [
     "# Replace None with appropriate code\n",
-    "not_significant = None\n",
-    "### BEGIN SOLUTION\n",
-    "\n",
-    "# Finding the name of the feature with the highest p-value\n",
-    "not_significant = multiple_model_results.pvalues.idxmax()\n",
-    "\n",
-    "# (It is also acceptable to just type in 'LotFrontage')\n",
-    "\n",
-    "### END SOLUTION"
+    "not_significant = multiple_model_results.pvalues.idxmax()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -944,14 +873,16 @@
     "# It should be one of the features in df\n",
     "assert not_significant in df.columns\n",
     "\n",
-    "# PUT ALL WORK FOR THE ABOVE QUESTION ABOVE THIS CELL\n",
-    "# THIS UNALTERABLE CELL CONTAINS HIDDEN TESTS\n",
-    "### BEGIN HIDDEN TESTS\n",
-    "\n",
     "assert not_significant == 'LotFrontage'\n",
-    "\n",
-    "### END HIDDEN TESTS"
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -971,7 +902,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
