--- a/4phase/63-network_regularization_and_evaluation.ipynb
+++ b/4phase/63-network_regularization_and_evaluation.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-12T19:31:45.552744Z",
@@ -72,14 +72,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-12T19:31:45.710738Z",
      "start_time": "2023-06-12T19:31:45.553743Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num GPUs Available:  0\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "print(\"Num GPUs Available: \", len(tf.config.list_physical_devices('GPU')))"
@@ -105,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-12T19:31:45.868712Z",
@@ -123,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-12T19:32:16.196771Z",
@@ -131,7 +139,124 @@
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "180/180 [==============================] - 2s 3ms/step - loss: 0.4983 - accuracy: 0.7824\n",
+      "Epoch 2/50\n",
+      "180/180 [==============================] - 0s 3ms/step - loss: 0.2278 - accuracy: 0.9037\n",
+      "Epoch 3/50\n",
+      "180/180 [==============================] - 0s 3ms/step - loss: 0.1661 - accuracy: 0.9327\n",
+      "Epoch 4/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.1327 - accuracy: 0.9505\n",
+      "Epoch 5/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.1080 - accuracy: 0.9577\n",
+      "Epoch 6/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0907 - accuracy: 0.9655\n",
+      "Epoch 7/50\n",
+      "180/180 [==============================] - 1s 3ms/step - loss: 0.0786 - accuracy: 0.9677\n",
+      "Epoch 8/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0678 - accuracy: 0.9750\n",
+      "Epoch 9/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0596 - accuracy: 0.9789\n",
+      "Epoch 10/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0510 - accuracy: 0.9789\n",
+      "Epoch 11/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0473 - accuracy: 0.9850\n",
+      "Epoch 12/50\n",
+      "180/180 [==============================] - 1s 3ms/step - loss: 0.0450 - accuracy: 0.9839\n",
+      "Epoch 13/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0400 - accuracy: 0.9839\n",
+      "Epoch 14/50\n",
+      "180/180 [==============================] - 1s 3ms/step - loss: 0.0360 - accuracy: 0.9878\n",
+      "Epoch 15/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0352 - accuracy: 0.9889\n",
+      "Epoch 16/50\n",
+      "180/180 [==============================] - 1s 3ms/step - loss: 0.0294 - accuracy: 0.9900\n",
+      "Epoch 17/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0268 - accuracy: 0.9917\n",
+      "Epoch 18/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0234 - accuracy: 0.9928\n",
+      "Epoch 19/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0219 - accuracy: 0.9917\n",
+      "Epoch 20/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0177 - accuracy: 0.9944\n",
+      "Epoch 21/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0198 - accuracy: 0.9922\n",
+      "Epoch 22/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0183 - accuracy: 0.9939\n",
+      "Epoch 23/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0158 - accuracy: 0.9944\n",
+      "Epoch 24/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0172 - accuracy: 0.9939\n",
+      "Epoch 25/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0124 - accuracy: 0.9955\n",
+      "Epoch 26/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0169 - accuracy: 0.9944\n",
+      "Epoch 27/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0118 - accuracy: 0.9961\n",
+      "Epoch 28/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0103 - accuracy: 0.9967\n",
+      "Epoch 29/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0116 - accuracy: 0.9967\n",
+      "Epoch 30/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0115 - accuracy: 0.9955\n",
+      "Epoch 31/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0107 - accuracy: 0.9961\n",
+      "Epoch 32/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0109 - accuracy: 0.9961\n",
+      "Epoch 33/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0090 - accuracy: 0.9972\n",
+      "Epoch 34/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0091 - accuracy: 0.9978\n",
+      "Epoch 35/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0078 - accuracy: 0.9978\n",
+      "Epoch 36/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0092 - accuracy: 0.9978\n",
+      "Epoch 37/50\n",
+      "180/180 [==============================] - 0s 3ms/step - loss: 0.0059 - accuracy: 0.9983\n",
+      "Epoch 38/50\n",
+      "180/180 [==============================] - 1s 3ms/step - loss: 0.0067 - accuracy: 0.9983\n",
+      "Epoch 39/50\n",
+      "180/180 [==============================] - 0s 3ms/step - loss: 0.0066 - accuracy: 0.9978\n",
+      "Epoch 40/50\n",
+      "180/180 [==============================] - 0s 3ms/step - loss: 0.0034 - accuracy: 0.9989\n",
+      "Epoch 41/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0050 - accuracy: 0.9983\n",
+      "Epoch 42/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0050 - accuracy: 0.9994\n",
+      "Epoch 43/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0040 - accuracy: 0.9994\n",
+      "Epoch 44/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0060 - accuracy: 0.9989\n",
+      "Epoch 45/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0038 - accuracy: 0.9983\n",
+      "Epoch 46/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0042 - accuracy: 0.9989\n",
+      "Epoch 47/50\n",
+      "180/180 [==============================] - 0s 2ms/step - loss: 0.0049 - accuracy: 0.9989\n",
+      "Epoch 48/50\n",
+      "180/180 [==============================] - 1s 4ms/step - loss: 0.0017 - accuracy: 0.9994\n",
+      "Epoch 49/50\n",
+      "180/180 [==============================] - 1s 4ms/step - loss: 0.0032 - accuracy: 0.9989\n",
+      "Epoch 50/50\n",
+      "180/180 [==============================] - 1s 4ms/step - loss: 0.0027 - accuracy: 0.9994\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x2309f22f2e0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = Sequential()\n",
     "model.add(Dense(12, activation='relu', input_dim=64))\n",
@@ -1272,9 +1397,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "tf-gpu",
+   "display_name": "Python (learn-env)",
    "language": "python",
-   "name": "tf-gpu"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1286,7 +1411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
