--- a/sql_practice/sql_practice.ipynb
+++ b/sql_practice/sql_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-07-10T05:58:04.553308Z",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-07-10T05:58:05.301987Z",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-07-10T05:58:06.063362Z",
@@ -2837,20 +2837,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BillingCity</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Prague</td>\n",
+       "      <td>25.86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  BillingCity  Total\n",
+       "0      Prague  25.86"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# In what city does the customer with the largest purchase amount live?"
+    "# In what city does the customer with the largest purchase amount live?\n",
+    "\n",
+    "query = \"\"\"\n",
+    "SELECT BillingCity, Total\n",
+    "FROM Invoice\n",
+    "WHERE Total = (\n",
+    "    SELECT MAX(Total)\n",
+    "    FROM Invoice)\n",
+    "\"\"\"\n",
+    "\n",
+    "largest = pd.read_sql(query, con)\n",
+    "largest\n",
+    "\n",
+    "\n",
+    "\n",
+    "# AVG_Price = pd.read_sql(\"\"\"\n",
+    "\n",
+    "# SELECT Inv.BillingCity, MAX(Inv.Total) as Max, Inv.CustomerId, Cust.City\n",
+    "# FROM Invoice Inv\n",
+    "# JOIN Customer Cust\n",
+    "# ON Inv.CustomerId = Cust.CustomerId\n",
+    "# \"\"\", con)\n",
+    "\n",
+    "# AVG_Price"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BillingCountry</th>\n",
+       "      <th>CustCont</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USA</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Canada</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>France</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  BillingCountry  CustCont\n",
+       "0            USA        13\n",
+       "1         Canada         8\n",
+       "2         France         5\n",
+       "3         Brazil         5\n",
+       "4        Germany         4"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# What country has the largest about of customers?"
+    "# What country has the largest about of customers?\n",
+    "\n",
+    "Country_largest_customers = pd.read_sql(\"\"\"\n",
+    "\n",
+    "SELECT Inv.BillingCountry, COUNT(DISTINCT(CustomerId)) as CustCont\n",
+    "FROM Invoice Inv\n",
+    "GROUP BY BillingCountry\n",
+    "ORDER BY CustCont DESC\n",
+    "LIMIT 5\n",
+    "\"\"\", con)\n",
+    "\n",
+    "Country_largest_customers\n",
+    "\n",
+    "# JOIN Customer Cust\n",
+    "# ON Inv.CustomerId = Cust.CustomerId\n"
    ]
   },
   {
@@ -2861,17 +3012,155 @@
    "source": [
     "# What is the most popular song by country?\n",
     "\n",
+    "Country_largest_customers = pd.read_sql(\"\"\"\n",
+    "\n",
+    "SELECT Inv.BillingCountry, COUNT(DISTINCT(CustomerId)) as CustCont\n",
+    "FROM Invoice Inv\n",
+    "GROUP BY BillingCountry\n",
+    "ORDER BY CustCont DESC\n",
+    "LIMIT 5\n",
+    "\"\"\", con)\n",
+    "\n",
+    "Country_largest_customers\n",
+    "\n",
     "# Who is the artist?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>InvoiceId</th>\n",
+       "      <th>TrackId</th>\n",
+       "      <th>count_song</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>108</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>319</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>108</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1979</th>\n",
+       "      <td>213</td>\n",
+       "      <td>3493</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980</th>\n",
+       "      <td>319</td>\n",
+       "      <td>3494</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1981</th>\n",
+       "      <td>108</td>\n",
+       "      <td>3496</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1982</th>\n",
+       "      <td>214</td>\n",
+       "      <td>3499</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1983</th>\n",
+       "      <td>108</td>\n",
+       "      <td>3500</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1984 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      InvoiceId  TrackId  count_song\n",
+       "0           108        1           1\n",
+       "1             1        2           2\n",
+       "2           319        3           1\n",
+       "3             1        4           1\n",
+       "4           108        5           1\n",
+       "...         ...      ...         ...\n",
+       "1979        213     3493           1\n",
+       "1980        319     3494           1\n",
+       "1981        108     3496           1\n",
+       "1982        214     3499           1\n",
+       "1983        108     3500           2\n",
+       "\n",
+       "[1984 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# What is the most common artist by playlist? \n",
+    "query = \"\"\"\n",
+    "SELECT InvoiceId, TrackId, COUNT(TrackId) as count_song\n",
+    "FROM InvoiceLine\n",
+    "GROUP BY TrackId\n",
+    "\"\"\"\n",
     "\n",
+    "popu_song = pd.read_sql(query, con)\n",
+    "popu_song\n",
     "# What is the name of their most popular song?\n"
    ]
   },
@@ -2882,6 +3171,8 @@
    "outputs": [],
    "source": [
     "# What song is in the most playlists?\n",
+    "\n",
+    "\n",
     "\n",
     "# Who is the artist?"
    ]
